Added repositories and sql connection string

--- a/src/MiniCrm.UI/appsettings.json
+++ b/src/MiniCrm.UI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServerConnection": "Server=ABUBAKR\\SQLEXPRESS;Database=MiniCRM.Test;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
